--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,5 +8,4 @@ pipelines:
         script:
           - pip install -r requirements.txt
           - pip install pytest coverage
-          - coverage run -m pytest
-          - coverage report
+          - ./unittest.sh
