--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,4 +8,4 @@ pipelines:
         script:
           - pip install -r requirements.txt
           - pip install pytest coverage
-          - ./unittest.sh
+          - bash unittest.sh
